<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:fadingEdge="horizontal"
    android:orientation="horizontal"
    android:padding="8dp"
    >


    <ImageView
        android:id="@+id/mission_patch_small"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:padding="8dp"
        android:scaleType="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/mission_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/mission_description"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="8dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</LinearLayout>