...
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/details_layout">

        <ImageView
            android:id="@+id/mission_patch_large"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Launch Site: "
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/launch_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:linksClickable="true"
...
